2014-08-13  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-13  Holger Seelig  <holger.seelig@yahoo.de>

	* GeoCoordinate.x3d: 

2014-08-12  Holger Seelig  <holger.seelig@yahoo.de>

	* GeoCoordinate.x3d: 

2014-08-11  Holger Seelig  <holger.seelig@yahoo.de>

	* OrthoImage.wrl: 

2014-08-11  Holger Seelig  <holger.seelig@yahoo.de>

	* ProximitySensor.wrl: 

2014-08-11  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d:
	* ProximitySensor.wrl: 

2014-08-10  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d:
	* Interpolators.wrl: 

2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* OutlineEditor.x3d:
	* OrthoImage.wrl: 

2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* x3d.jpeg: 

2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Rotor.wrl:
	* GoldenSphere.wrl: 

2014-08-07  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-07  Holger Seelig  <holger.seelig@yahoo.de>

	* SpotLight.wrl:
	* PointLight.wrl: 

2014-08-07  Holger Seelig  <holger.seelig@yahoo.de>

	* PointLight.wrl:
	* DirectionalLight.wrl: 

2014-08-06  Holger Seelig  <holger.seelig@yahoo.de>

	* mib.wrl:
	* car.wrl:
	* txt.wrl:
	* pack.wrl:
	* book.wrl:
	* fire.wrl:
	* deco.wrl:
	* index.wrl:
	* scene.wrl:
	* bogen.wrl:
	* off.wrl:
	* intro.wrl:
	* mummy.wrl:
	* mbenz.wrl:
	* bicman.wrl:
	* katze.wrl:
	* logo.wrl:
	* next.wrl:
	* people.wrl:
	* warn.wrl:
	* level1.wrl:
	* benhur.wrl:
	* mothra.wrl:
	* statue.wrl:
	* tresen.wrl:
	* back.wrl:
	* walls.wrl:
	* else-bg.wrl:
	* ubahn.wrl:
	* train.wrl:
	* dracula.wrl:
	* dollars.wrl:
	* tiffany.wrl:
	* pololow.wrl:
	* shirt.wrl:
	* index.wrl:
	* licht.wrl:
	* side.wrl:
	* jet.wrl:
	* frame.wrl:
	* index.wrl:
	* haken.wrl:
	* gate.wrl:
	* gate.wrl:
	* index__3.wrl:
	* index__4.wrl: