@@ -1,3 +1,9 @@
+2014-08-14  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* BrowserWindow.cpp:
+	* X3DBrowserEditor.cpp:
+	* OutlineCellRenderer.cpp: 
+
 2014-08-13  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* BrowserWindow.h:
