@@ -1,3 +1,7 @@
+2014-08-14  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* OutlineEditor.x3d: 
+
 2014-08-13  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* OutlineEditor.x3d: 
